--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <section class="step back">
             <div class="mapWrapperAcc">
-                <div class="mapTitle"> <p>Exploring Transit accessbility</p></div>
+                <div class="mapTitle"> <p>Transit accessbility map</p></div>
                 <div class="mapTitleLeft"> <p>Conventional Public Transit System </p> </div>
                 <div class="mapTitleRight"> <p style="color: #dcfcb8;">On-demand Multimodal Transit System</p> </div>
                 <div id="acc-wrapper">
@@ -190,7 +190,7 @@
 
         <section class="step back">
             <div class="mapWrapperEqu">
-                <div class="mapTitle"> <p>Exploring Transit equity</p></div>
+                <div class="mapTitle"> <p>Transit equity + equality map</p></div>
                 <div class="mapTitleLeft"> <p>Conventional Public Transit System </p> </div>
                 <div class="mapTitleRight"> <p style="color: #dcfcb8;">On-demand Multimodal Transit System</p> </div>
                 <div id='plot-wrapper'>
@@ -406,28 +406,6 @@
                     <div id="legend-wrapper"></div>
                 </div>
             </div>
-        </section>
-
-        <section class="step back">
-            <div class="DesLeft">
-                <h2 class="midtitle">
-                    Description
-                </h2>
-                <h3 class="description">
-                    ODMTS, a novel transit service, contributes to improving transit accessibility across the Atlanta region. Transit accessbility ~
-                </h3>
-            </div>
-            <div class="DesRight">
-                <h2 class="midtitle">
-                    Team
-                </h2>
-                <h3 class="description">
-                    <ul>UJ</ul>    
-                    <ul>SJ</ul>    
-                    <ul>Subhro</ul> 
-                </h3>
-            </div>
-
         </section>
 
     </div>
