Rename the repo

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
             <div class="logo-wrapper">
                 <a href="https://cspav.gatech.edu/"><img src="img/CSPAV_TechGold.jpg" alt="" width="200" height="35"></a>
             </div>
-            <h1 class="mast">Atlanta Transit</h1>
+            <h1 class="mast-title">Atlanta Transit</h1>
             <div class="focus"> 
                 <div class="focus--mask">
                         <div class="focus--mask-inner">Equity</div>
                 </div>
             </div> 
-            <h3 class="mast">An interactive tool that compares On-demand Multimodal Transit System (ODMTS) and the conventional transit system in Atlanta in terms of <br> 1) overall accessibility and <br> 2) transit equity/equality</h3>
+            <h3 class="mast-text">An interactive tool that compares On-demand Multimodal Transit System (ODMTS) and the conventional transit system in Atlanta in terms of <br> 1) overall accessibility and <br> 2) transit equity/equality</h3>
         </section>
 
         <section class="step">
