Add the Description page

--- a/index.html
+++ b/index.html
@@ -47,14 +47,15 @@
     <div id="graphic">
         <section class="step masthead" id="masterhead">
             <div class="logo-wrapper">
-                <a href="https://cspav.gatech.edu/"><img src="img/CSPAV_TechGold.jpg" alt="" width="200" height="35"></a>
+                <a href="https://cspav.gatech.edu/" target="_blank"><img src="img/CSPAV_TechGold.jpg" alt="" width="200" height="35"></a>
             </div>
-            <h1 class="mast-title">Atlanta Transit</h1>
+            <h1 class="mast-title">Atlanta's Transit</h1>
             <div class="focus"> 
                 <div class="focus--mask">
-                        <div class="focus--mask-inner">Equity</div>
+                        <div class="focus--mask-inner">Justice</div>
                 </div>
             </div> 
+            <h1 class="mast-subtitle">:The current and the future</h1>
             <h3 class="mast-text">An interactive tool that compares On-demand Multimodal Transit System (ODMTS) and the conventional transit system in Atlanta in terms of <br> 1) overall accessibility and <br> 2) transit equity/equality</h3>
         </section>
 
@@ -404,6 +405,34 @@
                     </div>
                     <div id="filter-wrapper-Equ"></div>
                     <div id="legend-wrapper"></div>
+                </div>
+            </div>
+        </section>
+
+        <section class="step back"> 
+            <div id="wrapper-end">
+                <div id="content-description">
+                    <h4>Description</h4>
+                    <h5>Both equity and equality seek a fair distribution of public resources
+                    </h5>
+                </div>
+                <div id="content-team">
+                    <h4>Team</h4>
+                    <ul>
+                        <li class="team-member">Uijeong (UJ) Hwang</li>
+                        <li class="team-info"><a href="https://cspav.gatech.edu/" target="_blank">Center for Spatial Planning Analytics and Visualization</a></li>
+                        <li class="team-member">Seung Jae Lieu</li>
+                        <li class="team-info">PhD Student, City and Regional Planning</li>
+                        <li class="team-member">Subhrajit Guhathakurta</li>
+                        <li class="team-info">Director</li>
+                        <li class="team-member">Pascal Van Hentenryck</li>
+                        <li class="team-info">CSPAV</li>
+                        <li class="team-member">Seung Jae Lieu</li>
+                        <li class="team-info">CSPAV</li>
+                        <li class="team-member">Hongzhao Guan</li>
+                        <li class="team-info">CSPAV</li>
+                    </ul>
+                    <h4>Publication</h4>
                 </div>
             </div>
         </section>
