Update the head page

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
         <section class="step"> 
             <h1>Transit Equality</h1>
-            <h2 id = "equality_desc">Equality means each group of people is given the same resources or opportunities. Transit (in)equality is measured by the Gini index and Lorenz curve which capture how far the distribution is from equality.
+            <h2 id="EqualityDes">Equality means each group of people is given the same resources or opportunities. Transit (in)equality is measured by the Gini index and Lorenz curve which capture how far the distribution is from equality.
             </h2>
         </section>
 
