--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
             </div>  -->
             <h1 class="mast-subtitle">:the current and future</h1>
-            <h3 class="mast-text">An interactive tool that compares On-demand Multimodal Transit System (ODMTS) and the conventional transit system in Atlanta in terms of <br> 1) overall accessibility and <br> 2) transit equity/equality</h3>
+            <h3 class="mast-text">An interactive tool that compares On-demand Multimodal Transit System (ODMTS) and the conventional transit system in Atlanta in terms of 1) overall accessibility and 2) transit equity/equality</h3>
         </section>
 
         <section class="step">
@@ -423,20 +423,18 @@
                 <div id="content-team">
                     <h4>Team</h4>
                     <ul>
-                        <li class="team-member">Subhrajit Guhathakurta</li>
-                        <li class="team-info">Professor, <a href="https://cspav.gatech.edu/" target="_blank">Center for Spatial Planning Analytics and Visualization (CSPAV)</a></li>
-                        <li class="team-member">Uijeong Hwang</li>
-                        <li class="team-info">Ph.D. Student, <a href="https://cspav.gatech.edu/" target="_blank">Center for Spatial Planning Analytics and Visualization (CSPAV)</a></li>
-                        <li class="team-member">Seung Jae Lieu</li>
-                        <li class="team-info">Master Student, <a href="https://cspav.gatech.edu/" target="_blank">Center for Spatial Planning Analytics and Visualization (CSPAV)</a></li>
-                        <li class="team-member">Pascal Van Hentenryck</li>
-                        <li class="team-info">Professor, <a href="https://www.ai4opt.org/" target="_blank">AI Institute for Advances in Optimization</a></li>
-                        <li class="team-member">Kevin Dalmeijer</li>
-                        <li class="team-info">Senior Research Associate, <a href="https://www.ai4opt.org/" target="_blank">AI Institute for Advances in Optimization</a></li>
-                        <li class="team-member">Hongzhao Guan</li>
-                        <li class="team-info">Ph.D. Student, <a href="https://www.ai4opt.org/" target="_blank">AI Institute for Advances in Optimization</a></li>
+                        <li class="team-member" style="font-weight: 500;"><a href="https://cspav.gatech.edu/" target="_blank">Center for Spatial Planning Analytics and Visualization (CSPAV)</a></li>
+                        <li class="team-member">Subhrajit Guhathakurta, <a class="member-info">Professor</a></li>
+                        <li class="team-member">Uijeong Hwang, <a class="member-info">Ph.D. Student</a></li>
+                        <li class="team-member">Seung Jae Lieu, <a class="member-info">Master Student</a></li>
                     </ul>
-                    <h4>Publication</h4>
+                    
+                    <ul>
+                        <li class="team-member" style="font-weight: 500; margin-top: 50px;"><a href="https://www.ai4opt.org/" target="_blank">AI Institute for Advances in Optimization</a></li>
+                        <li class="team-member">Pascal Van Hentenryck, <a class="member-info">Professor</a></li>
+                        <li class="team-member">Kevin Dalmeijer, <a class="member-info">Senior Research Associate</a></li>
+                        <li class="team-member">Hongzhao Guan, <a class="member-info">Ph.D. Student</a></li>
+                    </ul>
                 </div>
             </div>
         </section>
