--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
             <div class="logo-wrapper">
                 <a href="https://cspav.gatech.edu/" target="_blank"><img src="img/CSPAV_TechGold.jpg" alt="" width="280" height="50"></a>
             </div>
-            <h1 class="mast-title">Atlanta's Transit Justice</h1>
+            <h1 class="mast-title">Atlanta's Transit Equity</h1>
             <!-- <div class="focus"> 
                 <div class="focus--mask">
                         <div class="focus--mask-inner">Justice</div>
                 </div>
             </div>  -->
-            <h1 class="mast-subtitle">:the current and future</h1>
+            <h1 class="mast-subtitle">:Current benchmarks and future possibilities</h1>
             <h3 class="mast-text">An interactive tool that compares On-demand Multimodal Transit System (ODMTS) and the conventional transit system in Atlanta in terms of 1) overall accessibility and 2) transit equity/equality</h3>
         </section>
 
@@ -423,19 +423,15 @@
                 <div id="content-team">
                     <h4>Team</h4>
                     <ul>
-                        <li class="team-member" style="font-weight: 500;"><a href="https://cspav.gatech.edu/" target="_blank">Center for Spatial Planning Analytics and Visualization (CSPAV)</a></li>
                         <li class="team-member">Subhrajit Guhathakurta, <a class="member-info">Professor</a></li>
+                        <li class="team-member">Pascal Van Hentenryck, <a class="member-info">Professor</a></li>
                         <li class="team-member">Uijeong Hwang, <a class="member-info">Ph.D. Student</a></li>
                         <li class="team-member">Seung Jae Lieu, <a class="member-info">Master Student</a></li>
-                    </ul>
-                    
-                    <ul>
-                        <li class="team-member" style="font-weight: 500; margin-top: 50px;"><a href="https://www.ai4opt.org/" target="_blank">AI Institute for Advances in Optimization</a></li>
-                        <li class="team-member">Pascal Van Hentenryck, <a class="member-info">Professor</a></li>
                         <li class="team-member">Kevin Dalmeijer, <a class="member-info">Senior Research Associate</a></li>
                         <li class="team-member">Hongzhao Guan, <a class="member-info">Ph.D. Student</a></li>
                     </ul>
                 </div>
+                <!-- ### Collaborators: logo..  -->
             </div>
         </section>
 
