--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div id="graphic">
         <section class="step masthead" id="masterhead">
             <div class="logo-wrapper">
-                <a href="https://cspav.gatech.edu/" target="_blank"><img src="img/CSPAV_TechGold.jpg" alt="" width="280" height="50"></a>
+                <a href="https://cspav.gatech.edu/" target="_blank"><img id="logoCSPAV" src="img/CSPAV_TechGold.jpg" alt="" width="280" height="50"></a>
             </div>
             <h1 class="mast-title">Atlanta's Transit Equity</h1>
             <!-- <div class="focus"> 
@@ -431,7 +431,13 @@
                         <li class="team-member">Hongzhao Guan, <a class="member-info">Ph.D. Student</a></li>
                     </ul>
                 </div>
-                <!-- ### Collaborators: logo..  -->
+                <div id ="TeamLogo">
+                    <h4>In collaboration with</h4>
+                    <div id ="TeamLogoList">
+                        <a href="https://www.itsmarta.com/" target="_blank"><img src="img/MARTA.png" alt="" width="250" height="80" style="width: 100; height: auto;"></a>
+                        <a href="https://sam.isye.gatech.edu//" target="_blank"><img src="img/SAM.png" alt="" width="100" height="100" style="width: 100; height: auto;"></a>
+                    </div>
+                </div>
             </div>
         </section>
 
