--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         <section class="step">
             <h1>On-Demand Multimodal Transit System</h1>
             <h2>ODMTS connects residents in every corner of Atlanta to high-frequency rail/bus networks by serving their first/last miles via on-demand shuttles. <br> <br>
-                ODMTS is designed to contribute to improving both the transit accessibility and transit equity in Atlanta area.</h2>
-            <a class="btn-light btn-xl" href="https://sam.isye.gatech.edu/projects/demand-multimodal-transit-systems/atlanta-pilot" style="color:black">Learn More</a>
+                ODMTS is designed to contribute to improving both the transit accessibility and transit equity in the Atlanta area.</h2>
+            <a class="btn-light btn-xl" href="https://sam.isye.gatech.edu/projects/demand-multimodal-transit-systems/atlanta-pilot" target="_blank" style="color:black">Learn More</a>
         </section>
 
         <section class="step"> 
