Update the font size

--- a/index.html
+++ b/index.html
@@ -140,12 +140,12 @@
                         <div class='sliderAccContentAbsolute'>
                             <p style="margin-bottom:3px;"> Accessible within <span style="font-weight:600" id="sliderValueAcc_abs"> </span> minutes</p>
                             <input id='myRangeAcc_abs' class="slider" type="range" min="30" max="75" value="45" step="3">
-                            <p style="text-align:left; margin-bottom: 0em; margin-top: 0.2em; font-size: 13px; font-weight: 100;"> 30 minutes <span style="float:right"> 75 minutes </span> </p>
+                            <p style="text-align:left; margin-bottom: 0em; margin-top: 0.2em; font-size: calc(1rem - 0.15vw); font-weight: 100;"> 30 minutes <span style="float:right"> 75 minutes </span> </p>
                         </div>
                         <div class='sliderAccContentRelative'>
                             <p style="margin-bottom:3px;"> Accessible within <span style="font-weight:600" id="sliderValueAcc_rel"> </span> X driving time</p>
                             <input id='myRangeAcc_rel' class="slider" type="range" min="1" max="3" value="2" step="0.2">
-                            <p style="text-align:left; margin-bottom: 0em; margin-top: 0.2em; font-size: 13px; font-weight: 100;"> Equal <span style="float:right"> 3 times </span> </p>
+                            <p style="text-align:left; margin-bottom: 0em; margin-top: 0.2em; font-size: calc(1rem - 0.15vw); font-weight: 100;"> Equal <span style="float:right"> 3 times </span> </p>
                         </div>
                     </div>
                 </div>
@@ -204,7 +204,7 @@
                         </div>
                         <div id='gapSmallText'>
                             <p> Current </p>
-                            <p style="color: #dcfcb8; font-size: 15px; font-weight: 500;"> ODMTS </p>
+                            <p style="color: #dcfcb8; font-size: calc(1rem); font-weight: 500;"> ODMTS </p>
                         </div>
                         <div id='gapValue'>
                             <p> <span id="gapValueBefore"></b> </span> </p>
@@ -218,7 +218,7 @@
                         </div>
                         <div id="giniSmallText">
                             <p> Current </p>
-                            <p style="color: #dcfcb8; font-size: 15px; font-weight: 500;"> ODMTS </p>
+                            <p style="color: #dcfcb8; font-size: calc(1rem); font-weight: 500;"> ODMTS </p>
                         </div>
                         <div id="giniValue-wrapper">
                             <div id="giniValue">
@@ -227,9 +227,9 @@
                                 <p style="color: #e34b4b; margin-top: 0px !important; margin-bottom: 0px !important;"> <span id="giniBeforeHigh"></b> </span> </p>
                             </div>
                             <div id="giniValue">
-                                <p style="font-size: 12px; font-weight: 300; text-align: center;"> Low-demand neighborhoods </p>
-                                <p style="font-size: 12px; font-weight: 300; text-align: center;"> Mid-demand neighborhoods </p>
-                                <p style="font-size: 12px; font-weight: 300; text-align: center;"> High-demand neighborhoods </p>
+                                <p style="font-size: calc(1rem - 0.2vw); font-weight: 300; text-align: center;"> Low-demand neighborhoods </p>
+                                <p style="font-size: calc(1rem - 0.2vw); font-weight: 300; text-align: center;"> Mid-demand neighborhoods </p>
+                                <p style="font-size: calc(1rem - 0.2vw); font-weight: 300; text-align: center;"> High-demand neighborhoods </p>
                             </div>
                             <div id="giniValue">
                                 <p style="color: #fffde6; margin-top: 0px !important; margin-bottom: 0px !important;"> <span id="giniAfterLow"></b> </span> </p>
@@ -302,12 +302,12 @@
                         <div class='sliderEquContentAbsolute'>
                             <p style="margin-bottom:3px;"> Accessible within <span style="font-weight:600" id="sliderValueEqu_abs"> </span> minutes</p>
                             <input id='myRangeEqu_abs' class="slider" type="range" min="30" max="75" value="45" step="3">
-                            <p style="text-align:left; margin-bottom: 0em; margin-top: 0.2em; font-size: 13px; font-weight: 100;"> 30 minutes <span style="float:right"> 75 minutes </span> </p>
+                            <p style="text-align:left; margin-bottom: 0em; margin-top: 0.2em; font-size: calc(1rem - 0.15vw); font-weight: 100;"> 30 minutes <span style="float:right"> 75 minutes </span> </p>
                         </div>
                         <div class='sliderEquContentRelative'>
                             <p style="margin-bottom:3px;"> Accessible within <span style="font-weight:600" id="sliderValueEqu_rel"> </span> X driving time</p>
                             <input id='myRangeEqu_rel' class="slider" type="range" min="1" max="3" value="2" step="0.2">
-                            <p style="text-align:left; margin-bottom: 0em; margin-top: 0.2em; font-size: 13px; font-weight: 100;"> Equal <span style="float:right"> 3 times </span> </p>
+                            <p style="text-align:left; margin-bottom: 0em; margin-top: 0.2em; font-size: calc(1rem - 0.15vw); font-weight: 100;"> Equal <span style="float:right"> 3 times </span> </p>
                         </div>
                     </div>
                 </div>
@@ -373,19 +373,19 @@
                             </div>
                             <div id="giniValue-wrapper">
                                 <div id="giniValue">
-                                    <p style="color: #fffde6;"> <span id="giniBeforeLow2"></b> </span> </p>
-                                    <p style="color: #f7adad;"> <span id="giniBeforeMid2"></b> </span> </p>
-                                    <p style="color: #e34b4b;"> <span id="giniBeforeHigh2"></b> </span> </p>
+                                    <p style="color: #fffde6; margin-top: 0px !important; margin-bottom: 0px !important;"> <span id="giniBeforeLow2"></b> </span> </p>
+                                    <p style="color: #f7adad; margin-top: 0px !important; margin-bottom: 0px !important;"> <span id="giniBeforeMid2"></b> </span> </p>
+                                    <p style="color: #e34b4b; margin-top: 0px !important; margin-bottom: 0px !important;"> <span id="giniBeforeHigh2"></b> </span> </p>
                                 </div>
                                 <div id="giniValue">
-                                    <p style="font-size: 12px; font-weight: 300; text-align: center;"> Low-demand neighborhoods </p>
-                                    <p style="font-size: 12px; font-weight: 300; text-align: center;"> Mid-demand neighborhoods </p>
-                                    <p style="font-size: 12px; font-weight: 300; text-align: center;"> High-demand neighborhoods </p>
+                                    <p style="font-size: calc(1rem - 0.2vw); font-weight: 300; text-align: center;"> Low-demand neighborhoods </p>
+                                    <p style="font-size: calc(1rem - 0.2vw); font-weight: 300; text-align: center;"> Mid-demand neighborhoods </p>
+                                    <p style="font-size: calc(1rem - 0.2vw); font-weight: 300; text-align: center;"> High-demand neighborhoods </p>
                                 </div>
                                 <div id="giniValue">
-                                    <p style="color: #fffde6;"> <span id="giniAfterLow2"></b> </span> </p>
-                                    <p style="color: #f7adad;"> <span id="giniAfterMid2"></b> </span> </p>
-                                    <p style="color: #e34b4b;"> <span id="giniAfterHigh2"></b> </span> </p>
+                                    <p style="color: #fffde6; margin-top: 0px !important; margin-bottom: 0px !important;"> <span id="giniAfterLow2"></b> </span> </p>
+                                    <p style="color: #f7adad; margin-top: 0px !important; margin-bottom: 0px !important;"> <span id="giniAfterMid2"></b> </span> </p>
+                                    <p style="color: #e34b4b; margin-top: 0px !important; margin-bottom: 0px !important;"> <span id="giniAfterHigh2"></b> </span> </p>
                                 </div>
                             </div>
                         </div>
